<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent">
    
    <SurfaceView 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"        
        android:id="@+id/surface_camera" />
    
    <teaonly.projects.droidipcam.CameraView
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
        android:background="#000000FF" 
        android:id="@+id/surface_overlay"/>

    <LinearLayout 
        android:id="@+id/layout_setup" 
        android:layout_width="fill_parent" 
        android:layout_height="fill_parent" 
        xmlns:android="http://schemas.android.com/apk/res/android" 
        android:gravity="center" 
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content" 
            android:layout_width="wrap_content"
            android:gravity="center"
            android:background="#88333333"
            android:orientation="vertical">
            <RadioGroup
                android:id="@+id/resolution"
                android:layout_width="360dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                xmlns:android="http://schemas.android.com/apk/res/android">
                <RadioButton
                    android:id="@+id/res_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:layout_gravity="left"
                    android:layout_weight="0" 
                    android:text="@string/res_low"/>
                 <RadioButton
                    android:id="@+id/res_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_gravity="left"
                    android:layout_weight="0" 
                    android:text="@string/res_medium"/>
                  <RadioButton
                    android:id="@+id/res_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:layout_gravity="left"
                    android:layout_weight="0" 
                    android:text="@string/res_high"/>
            </RadioGroup>
        </LinearLayout>
        
        <LinearLayout
            android:layout_height="wrap_content" 
            android:layout_width="360dip"
            android:gravity="center"
            android:background="#88333333"
            android:orientation="horizontal">
            <Button 
                android:id="@+id/btn_start"
                android:layout_height="wrap_content"
                android:layout_width="128dip"
                android:layout_marginLeft = "5dip"
                android:layout_marginRight = "5dip"
                android:textSize="12dip"
                android:shadowColor="#FFFFFFFF"
                android:singleLine="true"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:textStyle="bold"            
                android:text="@string/action_start"/>
				
            <!--
			<Button 
                android:id="@+id/btn_test"
                android:layout_height="wrap_content"
                android:layout_width="128dip"
                android:layout_marginLeft = "5dip"
                android:layout_marginRight = "5dip"
                android:textSize="12dip"
                android:shadowColor="#FFFFFFFF"
                android:singleLine="true"
                android:shadowDx="0"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:textStyle="bold"            
                android:text="test"/>
            -->  

        </LinearLayout>
		
        <LinearLayout
            android:layout_height="wrap_content" 
            android:layout_width="360dip"
            android:gravity="center"
            android:background="#88333333"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/label_msg"
                android:layout_marginLeft = "5dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFFFF"
                android:text="@string/msg_idle"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
